--- a/style.css
+++ b/style.css
@@ -259,7 +259,11 @@ footer b {
   color: hsl(167, 40%, 24%);
 }
 
-.footer_links a {
+.footer_links > ul {
+  display: flex;
+  justify-content: space-around;
+}
+.footer_links > ul a {
   text-decoration: none;
   color: hsl(167, 40%, 24%);
   font-family: "Barlow", sans-serif;
@@ -345,6 +349,10 @@ footer div a:hover {
   .designs {
     grid-template-columns: repeat(4, 1fr);
     grid-area: designs;
+  }
+  .footer_links ul {
+    justify-content: center;
+    gap: 3em;
   }
 }
 
